--- a/app/src/main/res/layout/fragment_now_playing.xml
+++ b/app/src/main/res/layout/fragment_now_playing.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="32dp"
+        android:layout_marginBottom="32dp"
         android:layout_weight="1"
         android:adjustViewBounds="true"
         android:contentDescription="@string/album"
@@ -21,8 +22,6 @@
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="24dp"
-        android:paddingBottom="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -59,6 +58,7 @@
             android:id="@+id/nowPlayingPlayPause"
             android:layout_width="58dp"
             android:layout_height="0dp"
+            android:layout_marginBottom="24dp"
             android:adjustViewBounds="true"
             android:background="@drawable/ripple_unbounded"
             android:contentDescription="@string/play_pause"
@@ -79,7 +79,7 @@
             android:contentDescription="@string/skip_next"
             android:padding="12dp"
             android:scaleType="fitCenter"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/nowPlayingPlayPause"
             app:layout_constraintStart_toEndOf="@+id/nowPlayingPlayPause"
             app:layout_constraintTop_toTopOf="@+id/nowPlayingPlayPause"
             app:layout_constraintVertical_bias="0.0"
@@ -109,7 +109,7 @@
             android:contentDescription="@string/repeat"
             android:padding="12dp"
             android:scaleType="fitCenter"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/nowPlayingSkipNext"
             app:layout_constraintStart_toEndOf="@+id/nowPlayingSkipNext"
             app:layout_constraintTop_toTopOf="@+id/nowPlayingSkipNext"
             app:srcCompat="@drawable/ic_repeat"
@@ -199,7 +199,7 @@
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
                 android:text="@string/live"
-                android:textColor="?attr/fg"
+                android:textColor="?attr/bg"
                 app:layout_constraintBottom_toBottomOf="@+id/nowPlayingTimeDeterminate"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
